frontend/test/should_fail/index_isin_edge_fromto_candidate_mismatch.grg
#using "index_count_edge_model.gm"

rule i {
	n:Node;
	
	if{ isInEdgesFromIndexFromTo(n, fooi, enu::qux, enu::bar); }
	
	modify {
	}
}
